--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
       <div class="element"></div>
     </div>
 
+    <!-- scroll to top button -->
+    <button class="scroll-to-top">
+        <svg width="100%" height="100%" viewBox="-1 -1 102 102">
+            <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+        </svg>
+    </button>
+
     <!-- Main script file -->
     <script src="app.js"></script>
 </body>
